# toolbox

./: .prettierrc  README.md  entitlements.plist  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  playground.rs
src-tauri/src/commands/: accessibility_element.rs  mod.rs  nscolor.rs  nsevent.rs  nsscreen.rs  nswindow.rs
src-tauri/src/data/: frame.rs  mod.rs  mouse.rs  screen.rs  window_info.rs
src-tauri/src/extensions/: accessibility_elements.rs  event_monitor.rs  mod.rs  nscolor.rs
src-tauri/src/patch_window/: action_handler.rs  mod.rs  overlay.rs  statusbar.rs
src-tauri/src/window_manager/: accessibility.rs  data.rs  event.rs  mod.rs  window.rs
src/apps/: Overlay.svelte  Statusbar.svelte
src/lib/_apps/Overlay/: Canvas.svelte  View.svelte
src/lib/_apps/Statusbar/: View.svelte
src/lib/components/: Canvas.svelte  Rect.svelte
src/lib/models/: channel.ts  config.ts  window.ts
src/lib/modules/cocoa/models/: accessibility-element.ts  nscolor.ts  nsevent.ts  nsscreen.ts  nswindow.ts
src/lib/modules/overlay/: index.ts
src/lib/modules/overlay/controllers/: area-calculator.controller.ts  facy-zones.controller.ts  overlay-settings.controller.ts  window-manager.controller.ts
src/lib/modules/overlay/view/: Canvas.svelte  FancyZone.svelte  Overlay.svelte  Setup.svelte
src/lib/modules/plugins/: index.ts
src/lib/modules/plugins/core/autostart/: index.ts
src/lib/modules/plugins/core/caffeinate/: index.ts
src/lib/modules/plugins/core/window-manager/: index.ts  window-manager-plugin.store.ts
src/lib/modules/plugins/models/: plugin.ts
src/lib/modules/settings/: index.ts
src/lib/modules/settings/model/: mappings.ts
src/lib/modules/settings/store/: constants.ts  settings.store.ts  theme.store.ts
src/lib/modules/settings/view/: General.svelte  Mappings.svelte  SettingsView.svelte  Tabs.svelte
src/lib/modules/shared/components/: Button.svelte  Checkbox.svelte  FormGroup.svelte  FramePosition.svelte  Placeholder.svelte  RangeSlider.svelte  Rect.svelte  ShortcutRecorder.svelte  Switch.svelte  Toggle.svelte  index.ts
src/lib/modules/shared/components/Icon/: Icon.svelte
src/lib/modules/shared/components/SegmentedControl/: context.ts  (+3 more)
src/lib/modules/shared/controllers/: config.controller.ts  index.ts
src/lib/modules/shared/helpers/: index.ts  store.ts
src/lib/modules/shared/models/: config.ts  frame.ts  geometry.ts  index.ts  mouse.ts  platform-view.ts  screen.ts  window.ts
src/lib/modules/shared/services/: caffeinate.service.ts  channel.service.ts  config.service.ts  index.ts  storage.service.ts
src/lib/modules/statusbar/: index.ts
src/lib/modules/statusbar/components/: Footer.svelte
src/lib/modules/statusbar/controllers/: config.controller.ts  settings.controller.ts  statusbar.controller.ts
src/lib/modules/statusbar/store/: index.ts
src/lib/modules/statusbar/view/: Setup.svelte  Statusbar.svelte
src/lib/modules/window-manager/: index.ts  screens.ts  window-manager.ts
src/lib/service/: area-calculator.ts  channel.ts  config-reader.ts  storage.ts
src/lib/shared/components/: Footer.svelte  Toggle.svelte
src/lib/store/: config.ts  settings.ts  window-manager.ts
(+18 files in other folders)
