[package]
name = "toolbox"
version = "2.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all", "devtools", "macos-private-api", "system-tray"] }
serde_json = "1.0"
active-win-pos-rs = "0.7.1"
window-vibrancy = "0.3.2"

[dependencies.tauri-plugin-fs-watch]
git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"
branch = "release"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2"
block = "0.1.6"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
accessibility = "0.1.6"
accessibility-sys = "0.1.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

