[package]
name = "toolbox"
version = "3.1.0"
description = "Window manager app"
authors = ["freethinkel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "macos-private-api", "system-tray"] }
active-win-pos-rs = "0.7.1"
window-vibrancy = "0.3.2"
nanoid = "0.4.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
block = "0.1.6"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"
core-graphics = "0.22.3"
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
rdev = "0.5.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
